--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'kodilla-exception'
 include 'kodilla-game-snake'
 include 'kodilla-text-game'
 include 'kodilla-good-patterns'
+include 'kodilla-spring-intro'
+
 
