--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ include 'kodilla-game-snake'
 include 'kodilla-text-game'
 include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
-
+include 'kodilla-spring'
+include 'kodilla-spring-web'
 
